<resources>
    <string name="app_name">LoginScreen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login:</string>
    <string name="attempts">Attempts Left:</string>
    <string name="title_activity_settings">Settings</string>

    <string name="scan_button_text">Scan</string>
    <string name="title_activity_category">CategoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="download">Download</string>
    <string name="take_10_inventory">Take\nInventory</string>
    <string name="clear">Clear</string>
    <string name="database">Database</string>
    <string name="品名">品名</string>
    <string name="規格">規格</string>
    <string name="料號">料號</string>
    <string name="設備類別">設備類別</string>
    <string name="設備用途">設備用途</string>
    <string name="保管人">保管人</string>
    <string name="掛帳部門">掛帳部門</string>
    <string name="財產編號">財產編號</string>
    <string name="選擇全部">選擇全部</string>
    <string name="盤點資料">盤點資料</string>
    <string name="未盤點">未盤點(點擊可查詢)</string>
    <string name="盤點">eFA\n盤點</string>
    <string name="帳號">帳號</string>
    <string name="密碼">密碼</string>
    <string name="下載數">下載數</string>
    <string name="未盤點數">未盤點</string>
    <string name="已盤點數">已盤點</string>
    <string name="已上傳數">已上傳</string>
    <string name="部門窗口"><![CDATA[部門窗口->]]></string>
    <string name="負責人">負責人</string>
    <string name="部門名稱">部門名稱</string>
    <string name="數量">數量</string>
    <string name="productNameShow">TextView</string>

    <string name="specshow">TextView</string>
    <string name="備註">備註</string>
    <string name="確認">確認</string>
    <string name="部門代碼部門名稱部門窗口">部門代碼|部門名稱|部門窗口</string>
    <string name="同步錯誤">同步錯誤</string>

    <string name="檔案上傳成功">檔案上傳成功</string>

    <string name="以下為未能成功上傳的資料">以下為未能成功上傳的資料</string>

    <string name="提醒">提醒</string>
    <string name="下載資料庫會重置資料">下載資料庫會重置資料</string>

    <string name="已無未盤點資料">已無未盤點資料</string>

    <string name="連線失敗">連線失敗</string>
    <string name="公司別">公司別</string>
    <string name="登出通知同仁">登出通知同仁</string>
    <string name="直接下載">直接下載</string>
    <string name="提示">提示</string>
    <string name="前一位登入同仁">前一位登入同仁</string>
    <string name="尚有未上傳資產">\" 尚有未上傳資產: \"</string>
    <string name="筆如直接下載則會清空前一位同仁紀錄或通知同仁進行同步作業">筆。如直接下載則會清空前一位同仁紀錄，或通知同仁進行同步作業。</string>
    <string name="資料未下載">資料未下載</string>
    <string name="無此權限">無此權限</string>
    <string name="尚有未傳資料">尚有未傳資料</string>
    <string name="無資料">無資料</string>
    <string name="初">初</string>


    <string name="盤點結果">盤點結果</string>
    <string name="資產狀態">資產狀態</string>
    <string name="請確實選擇資產狀態以及盤點結果">請確實選擇資產狀態以及盤點結果</string>
    <string name="version" translatable="false">version:</string>
    <string name="並無此筆資料">並無此筆資料</string>
    <string name="已盤點完成">已盤點完成</string>
    <string name="資產編號">資產編號</string>
    <string name="本資料組已盤點完成">本資料組已盤點完成</string>
    <string name="重新確認">重新確認</string>
    <string name="盤點資料">盤點資料</string>
    <string name="部門選擇">部門選擇</string>
    <string name="返回">返回</string>
    <string name="盤點結果">盤點結果</string>
    <string name="資產狀態">資產狀態</string>
</resources>
