<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/inventoryStatusShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inventoryLabelShow"
        android:layout_alignEnd="@id/inventoryLabelShow"
        android:gravity="center_vertical|end"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inventoryLabelShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phase"
        android:layout_alignEnd="@id/phase"
        android:maxLines="1"
        android:text="abdddddd"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/inventory_button_shape"
        android:textColor="@color/white"
        android:text="手動更改"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14dp" />



    <TextView
        android:id="@+id/nameInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custodian"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical|end"
        android:text="LA12000464"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameInsert"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-1dp"
        android:gravity="center_vertical|end"
        android:text="@string/數量"
        android:textColor="@android:color/darker_gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/countInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/count"
        android:gravity="center_vertical|end"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/productNameShow"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productNameTitle"
        android:layout_marginStart="5dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/specTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productNameShow"
        android:layout_marginStart="5dp"
        android:text="@string/規格"
        android:textColor="@android:color/darker_gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/productNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scanData"
        android:layout_marginStart="5dp"
        android:text="@string/品名"
        android:textColor="@android:color/darker_gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/custodian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specInsert"
        android:layout_marginStart="5dp"
        android:text="@string/保管人"
        android:textColor="@android:color/darker_gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/phase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="255dp"
        android:layout_marginTop="10dp"
        android:text="初"
        android:textColor="@color/officialBrown"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/passPhase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/phase"
        android:layout_marginTop="75dp"
        android:text="初"
        android:textColor="@color/officialBrown"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/note"
        android:layout_width="90sp"
        android:layout_height="40dp"
        android:layout_below="@+id/inventoryStatusSpinner"
        android:layout_alignEnd="@id/phase"
        android:background="@drawable/edittext_bg_forinventory"
        android:hint="@string/備註"
        android:inputType="text"
        android:maxLines="1"
        android:padding="7.5dp"
        android:textSize="14sp">

    </EditText>

    <TextView
        android:id="@+id/specInsert"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/specTitle"
        android:layout_marginStart="5sp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scanData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="21sp"
        android:textStyle="bold" />


    <Spinner
        android:id="@+id/inventoryLabelSpinner"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_below="@+id/passPhase"
        android:layout_alignEnd="@id/phase"
        android:background="@drawable/inventoryspinner_bg"
        android:ems="10"
        android:enabled="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="8sp" />

    <Spinner
        android:id="@+id/inventoryStatusSpinner"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_below="@+id/inventoryLabelSpinner"
        android:layout_alignEnd="@id/phase"
        android:background="@drawable/inventoryspinner_bg"
        android:ems="10"
        android:enabled="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="8dp"
        android:visibility="visible" />
</RelativeLayout>
